loopfor.LoopFor.scala.error
Compilation error:
LoopFor:7: error: not found: value march
marche = march - 1
         ^