loopfor.LoopFor.scala.code
var marche=0
var pas=0
while(!isOverBaggle()){
  forward()
  marche = marche + 1
}
marche = march - 1
pickupBaggle()
for (pas<- 0 to marche){
  forward()
}
dropBaggle()